--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
     width: 300px;
     margin-top: 15%;
     margin-left: 40%;
+    transition: all 0.2s ease;
 }
 
 #box{
@@ -22,4 +23,27 @@ body{
     text-align: center;
     line-height: 110px;
     color: rgb(0, 0, 0);
+}
+
+@media (max-width: 600px) {
+    #area{
+        position: absolute;
+        height: 150px;
+        width: 150px;
+        margin-top: 15%;
+        margin-left: 40%;
+        transition: all 0.2s ease;
+    }
+    
+    #box{
+        background-color: rgb(175, 125, 125);
+        height: 40%;
+        width: 40%;
+        margin-top: 30%;
+        margin-left: 30%;
+        text-align: center;
+        line-height: 20px;
+        font-size: 18px;
+        color: rgb(0, 0, 0);
+    }
 }
