--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body{
     width: 100vw;
     overflow: hidden;
     background-color: rgb(0, 0, 0);
+    font-family: calibri;
 }
 
 #area{
@@ -22,7 +23,7 @@ body{
     margin-left: 30%;
     text-align: center;
     line-height: 110px;
-    color: rgb(0, 0, 0);
+    color: white;
 }
 
 @media (max-width: 600px) {
