--- a/style.css
+++ b/style.css
@@ -45,6 +45,6 @@ body{
         text-align: center;
         line-height: 20px;
         font-size: 18px;
-        color: rgb(0, 0, 0);
+        color: white;
     }
 }
